--- a/index.html
+++ b/index.html
@@ -114,21 +114,26 @@
           <span class="drawer-menu__jp-label">Click for V2 version.</span>
         </a>
       </li>
+<!--===============================================================================================-->
 	  <center>
-	  <iframe data-aa='2195009' src='//ad.a-ads.com/2195009?size=320x50' style='width:320px; height:50px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 	  </center>
+<!--===============================================================================================-->
     </ul>
-	
+<!--===============================================================================================-->
     <div class="drawer-menu__close-button">
       <button class="menu-button js-menu-close-trigger" type="button" aria-label="メニューを閉じる">
         <span class="menu-button__icon" data-type="close"></span>
       </button>
     </div>
   </div>
-  
-  <div class="drawer-menu__overlay js-menu-close-trigger">	  <center>
-	  <iframe data-aa='2195009' src='//ad.a-ads.com/2195009?size=320x50' style='width:320px; height:50px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
-	  </center></div>
+<!--===============================================================================================-->
+	<div class="drawer-menu__overlay js-menu-close-trigger">
+		<center>
+
+		</center>
+	</div>
+<!--===============================================================================================-->
 </div>
 <!--===============================================================================================-->
 </header>
@@ -140,7 +145,7 @@
 <div class="head" id="cpcontainer">&nbsp;</div>
 <div class="head" id="clock"></div>
 <!--===============================================================================================-->
-	  <iframe data-aa='2195009' src='//ad.a-ads.com/2195009?size=320x50' style='width:320px; height:50px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 <!--===============================================================================================-->
                                 </center>
 								</div>
@@ -148,13 +153,13 @@
                             </div>
 <!--===============================================================================================-->
 	<center>
-<iframe data-aa='2185272' src='//ad.a-ads.com/2185272?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 	</center>
 <!--===============================================================================================-->
     <section class="container">
         <div class="row">
             <div class="col-0 col-md-1">
-<iframe data-aa='2185271' src='//ad.a-ads.com/2185271?size=160x600' style='width:160px; height:600px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 			</div>
 <!-- END PUBLICIDAD -->
 <!--===============================================================================================-->
@@ -304,14 +309,14 @@
                                 </div>
                             </div>
 <!--===============================================================================================-->
-<iframe data-aa='2137942' src='//acceptable.a-ads.com/2137942' style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
+
                         </div>
 						</div>
 <!--===============================================================================================-->
 
 <!--===============================================================================================-->
 <center>
-<iframe data-aa='2163843' src='//ad.a-ads.com/2163843?size=200x200' style='width:200px; height:200px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 </center>
 <!--===============================================================================================-->
 						<div class="card-fc my-1 head" id="hidden-satoshi">
